arm: socfpga: Add SMP, sdmmmc platform data, and clock entries.
-Add more clock entries to the common clock framework.
-Enable SMP
-Add SD/MMC platform data for SDMMC driver.

Signed-off-by: Dinh Nguyen <dinguyen@altera.com>

--- a/arch/arm/configs/socfpga_defconfig
+++ b/arch/arm/configs/socfpga_defconfig
@@ -18,6 +18,7 @@ CONFIG_MODULE_UNLOAD=y
 CONFIG_ARCH_SOCFPGA=y
 CONFIG_MACH_SOCFPGA_CYCLONE5=y
 CONFIG_ARM_THUMBEE=y
+CONFIG_SMP=y
 # CONFIG_CACHE_L2X0 is not set
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_VMSPLIT_2G=y
@@ -61,6 +62,9 @@ CONFIG_SERIAL_8250_CONSOLE=y
 CONFIG_SERIAL_8250_NR_UARTS=2
 CONFIG_SERIAL_8250_RUNTIME_UARTS=2
 CONFIG_SERIAL_8250_DW=y
+CONFIG_MMC=y
+CONFIG_MMC_DW=y
+CONFIG_MMC_DW_IDMAC=y
 # CONFIG_RTC_HCTOSYS is not set
 CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
