--- a/arch/arm/boot/dts/socfpga.dtsi
+++ b/arch/arm/boot/dts/socfpga.dtsi
@@ -174,5 +174,35 @@
 			reg-shift = <2>;
 			reg-io-width = <4>;
 		};
+
+		usb0: usb@ffb00000 {
+				compatible = "snps,dwc-otg";
+				reg = <0xffb00000 0xffff>;
+				interrupts = <0 125 4>;
+				dma-mask = <0xffffffff>;
+				ulpi-ddr = <0>;
+				host-rx-fifo-size = <512>;
+				dev-rx-fifo-size = <512>;
+				dev-nperio-tx-fifo-size = <4096>;
+				dev-perio-tx-fifo-size = <512 512 512 512 512 512
+					512 512 512 512 512 512 512 512 512>;
+				dev-tx-fifo-size = <512 512 512 512 512 512
+					512 512 512 512 512 512 512 512 512>;
+		};
+
+		usb1: usb@ffb40000 {
+				compatible = "snps,dwc-otg";
+				reg = <0xffb40000 0xffff>;
+				interrupts = <0 128 4>;
+				dma-mask = <0xffffffff>;
+				ulpi-ddr = <1>;
+				host-rx-fifo-size = <512>;
+				dev-rx-fifo-size = <512>;
+				dev-nperio-tx-fifo-size = <4096>;
+				dev-perio-tx-fifo-size = <512 512 512 512 512 512
+					512 512 512 512 512 512 512 512 512>;
+				dev-tx-fifo-size = <512 512 512 512 512 512
+					512 512 512 512 512 512 512 512 512>;
+		};
 	};
 };
