gpio: designware: Add gpio-dw drivers part
Add gpio-dw driver for SOCFPGA.

NOTE: This drivers needs to get cleaned up a bit to make better use
of sparse irqs. There should be no need to define virtual_irq_start
if irq_domain_add_legacy() was used correctly.

Signed-off-by: Dinh Nguyen <dinguyen@altera.com>

--- a/drivers/gpio/Makefile
+++ b/drivers/gpio/Makefile
@@ -8,6 +8,7 @@ obj-$(CONFIG_OF_GPIO)		+= gpiolib-of.o
 # Device drivers. Generally keep list sorted alphabetically
 obj-$(CONFIG_GPIO_GENERIC)	+= gpio-generic.o
 
+obj-$(CONFIG_GPIO_DW)		+= gpio-dw.o
 obj-$(CONFIG_GPIO_74X164)	+= gpio-74x164.o
 obj-$(CONFIG_GPIO_AB8500)	+= gpio-ab8500.o
 obj-$(CONFIG_GPIO_ADNP)		+= gpio-adnp.o
