FogBugz #80929: Make CACHE_L2XO a config option.
Instead of enabling l2 cache by default, make it a config option.

Signed-off-by: Dinh Nguyen <dinguyen@altera.com>

--- a/arch/arm/mach-socfpga/Kconfig
+++ b/arch/arm/mach-socfpga/Kconfig
@@ -13,5 +13,6 @@ config ARCH_SOCFPGA
 	select HAVE_ARM_TWD if SMP
 	select HAVE_SMP
 	select MFD_SYSCON
+	select MIGHT_HAVE_CACHE_L2X0
 	select SPARSE_IRQ
 	select USE_OF
