--- a/arch/arm/boot/dts/socfpga_vt.dts
+++ b/arch/arm/boot/dts/socfpga_vt.dts
@@ -19,17 +19,17 @@
 /include/ "socfpga.dtsi"
 
 / {
-	model = "Altera SOCFPGA Cyclone V";
-	compatible = "altr,socfpga-cyclone5";
+	model = "Altera SOCFPGA VT";
+	compatible = "altr,socfpga-vt";
 
 	chosen {
-		bootargs = "console=ttyS0,4800";
+		bootargs = "console=ttyS0,57600";
 	};
 
 	memory {
 		name = "memory";
 		device_type = "memory";
-		reg = <0x0 0x4000000>; /* 64MB */
+		reg = <0x0 0x40000000>; /* 1 GB */
 	};
 
 	soc {
@@ -97,35 +97,35 @@
 		timer0: timer@ffc08000 {
 			compatible = "snps,dw-apb-timer-sp";
 			interrupts = <0 167 4>;
-			clock-frequency = <77161>;
+			clock-frequency = <7000000>;
 			reg = <0xffc08000 0x1000>;
 		};
 
 		timer1: timer@ffc09000 {
 			compatible = "snps,dw-apb-timer-sp";
 			interrupts = <0 168 4>;
-			clock-frequency = <77161>;
+			clock-frequency = <7000000>;
 			reg = <0xffc09000 0x1000>;
 		};
 
 		timer2: timer@ffd00000 {
 			compatible = "snps,dw-apb-timer-osc";
 			interrupts = <0 169 4>;
-			clock-frequency = <19290>;
+			clock-frequency = <7000000>;
 			reg = <0xffd00000 0x1000>;
 		};
 
 		timer3: timer@ffd01000 {
 			compatible = "snps,dw-apb-timer-osc";
 			interrupts = <0 170 4>;
-			clock-frequency = <19290>;
+			clock-frequency = <7000000>;
 			reg = <0xffd01000 0x1000>;
 		};
 
 		uart0: uart@ffc02000 {
 			compatible = "snps,dw-apb-uart";
 			reg = <0xffc02000 0x1000>;
-			clock-frequency = <77161>;
+			clock-frequency = <7372800>;
 			interrupts = <0 162 4>;
 			reg-shift = <2>;
 			reg-io-width = <4>;
@@ -134,7 +134,7 @@
 		uart1: uart@ffc03000 {
 			compatible = "snps,dw-apb-uart";
 			reg = <0xffc03000 0x1000>;
-			clock-frequency = <77161>;
+			clock-frequency = <7372800>;
 			interrupts = <0 163 4>;
 			reg-shift = <2>;
 			reg-io-width = <4>;
