--- a/arch/arm/boot/dts/socfpga_ice.dts
+++ b/arch/arm/boot/dts/socfpga_ice.dts
@@ -19,17 +19,17 @@
 /include/ "socfpga.dtsi"
 
 / {
-	model = "Altera SOCFPGA Cyclone V";
-	compatible = "altr,socfpga-cyclone5";
+	model = "Altera SOCFPGA Emulator";
+	compatible = "altr,socfpga-ice";
 
 	chosen {
-		bootargs = "console=ttyS0,115200";
+		bootargs = "console=ttyS0,4800";
 	};
 
 	memory {
 		name = "memory";
 		device_type = "memory";
-		reg = <0x0 0x40000000>; /* 1GB */
+		reg = <0x0 0x4000000>; /* 64MB */
 	};
 
 	soc {
