FogBugz #89246:Boot Linux on actual hardware
Boot up Linux on devkit using SDRAM on FPGA with an address
location of 0xC0000000. A kconfig option CONFIG_FPGA_SDRAM
has been introduced. This kconfig option is for booting
Linux using the SDRAM on the FPGA.

Also remove NAND support from socfpga_defconfig. Can always
be enabled by menuconfig.

NOTE: To boot Linux on VT or ICE, need to make sure that
CONFIG_FPGA_SDRAM is not selected.

Signed-off-by: Dinh Nguyen <dinguyen@altera.com>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -263,7 +263,7 @@ config ARCH_SOCFPGA
 	select GENERIC_CLOCKEVENTS
 	select GPIO_PL061 if GPIOLIB
 	select HAVE_ARM_SCU
-	select HAVE_SMP
+	select HAVE_SMP if (!FPGA_SDRAM)
 	select SPARSE_IRQ
 	select USE_OF
 	help
@@ -1096,6 +1096,8 @@ source "arch/arm/mach-sa1100/Kconfig"
 
 source "arch/arm/plat-samsung/Kconfig"
 source "arch/arm/plat-s3c24xx/Kconfig"
+
+source "arch/arm/mach-socfpga/Kconfig"
 
 source "arch/arm/plat-spear/Kconfig"
 
