--- a/arch/arm/configs/socfpga_defconfig
+++ b/arch/arm/configs/socfpga_defconfig
@@ -17,6 +17,7 @@ CONFIG_MODULE_UNLOAD=y
 # CONFIG_IOSCHED_CFQ is not set
 CONFIG_ARCH_SOCFPGA=y
 CONFIG_MACH_SOCFPGA_CYCLONE5=y
+CONFIG_FPGA_SDRAM=y
 CONFIG_ARM_THUMBEE=y
 CONFIG_SMP=y
 CONFIG_HIGH_RES_TIMERS=y
@@ -45,11 +46,6 @@ CONFIG_MTD=y
 CONFIG_MTD_CHAR=y
 CONFIG_MTD_BLOCK=y
 CONFIG_MTD_M25P80=y
-CONFIG_MTD_NAND_ECC=y
-CONFIG_MTD_NAND=y
-CONFIG_MTD_NAND_DENALI=y
-CONFIG_MTD_NAND_DENALI_DT=y
-CONFIG_MTD_NAND_IDS=y
 CONFIG_PROC_DEVICETREE=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_COUNT=2
