FogBugz #91040: Use HPS SDRAM by default
To use SDRAM on the FPGA, just enable CONFIG_FPGA_SDRAM.

Signed-off-by: Dinh Nguyen <dinguyen@altera.com>

--- a/arch/arm/configs/socfpga_defconfig
+++ b/arch/arm/configs/socfpga_defconfig
@@ -17,7 +17,7 @@ CONFIG_MODULE_UNLOAD=y
 # CONFIG_IOSCHED_CFQ is not set
 CONFIG_ARCH_SOCFPGA=y
 CONFIG_MACH_SOCFPGA_CYCLONE5=y
-CONFIG_FPGA_SDRAM=y
+# CONFIG_FPGA_SDRAM is not set
 CONFIG_ARM_THUMBEE=y
 CONFIG_SMP=y
 CONFIG_HIGH_RES_TIMERS=y
