FogBugz 91072: Disable SMP by default
SMP is not working on the devkit. Turn it off by default.

Signed-off-by: Dinh Nguyen <dinguyen@altera.com>

--- a/arch/arm/configs/socfpga_defconfig
+++ b/arch/arm/configs/socfpga_defconfig
@@ -19,7 +19,7 @@ CONFIG_ARCH_SOCFPGA=y
 CONFIG_MACH_SOCFPGA_CYCLONE5=y
 # CONFIG_FPGA_SDRAM is not set
 CONFIG_ARM_THUMBEE=y
-CONFIG_SMP=y
+# CONFIG_SMP is not set
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_VMSPLIT_2G=y
 CONFIG_NR_CPUS=2
