--- a/arch/arm/boot/dts/socfpga.dtsi
+++ b/arch/arm/boot/dts/socfpga.dtsi
@@ -465,6 +465,8 @@
 			clocks = <&emac0_clk>;
 			clock-names = "stmmaceth";
 			status = "disabled";
+			clocks = <&emac0_clk>;
+			clock-names = "stmmaceth";
 		};
 
 		gmac1: ethernet@ff702000 {
@@ -476,6 +478,8 @@
 			clocks = <&emac1_clk>;
 			clock-names = "stmmaceth";
 			status = "disabled";
+			clocks = <&emac1_clk>;
+			clock-names = "stmmaceth";
 		};
 
 		gpio0: gpio@ff708000 {
@@ -488,6 +492,7 @@
 			#interrupt-cells = <2>;
 			gpio-controller;
 			#gpio-cells = <2>;
+			clocks = <&per_base_clk>;
 		};
 
 		gpio1: gpio@ff709000 {
@@ -500,6 +505,7 @@
 			#interrupt-cells = <2>;
 			gpio-controller;
 			#gpio-cells = <2>;
+			clocks = <&per_base_clk>;
 		};
 
 		gpio2: gpio@ff70a000 {
@@ -512,6 +518,7 @@
 			#interrupt-cells = <2>;
 			gpio-controller;
 			#gpio-cells = <2>;
+			clocks = <&per_base_clk>;
 		};
 
 		L2: l2-cache@fffef000 {
@@ -566,6 +573,7 @@
 			bus-num = <0>;
 			tx-dma-channel = <&pdma 16>;
 			rx-dma-channel = <&pdma 17>;
+			clocks = <&per_base_clk>;
 
 			spidev@0 {
 				compatible = "spidev";
@@ -585,6 +593,7 @@
 			bus-num = <1>;
 			tx-dma-channel = <&pdma 20>;
 			rx-dma-channel = <&pdma 21>;
+			clocks = <&per_base_clk>;
 
 			spidev@0 {
 				compatible = "spidev";
@@ -673,6 +682,7 @@
 			reg = <0xffc04000 0x1000>;
 			interrupts = <0 158 4>;
 			emptyfifo_hold_master = <1>;
+			clocks = <&per_base_clk>;
 		};
 
 		i2c1: i2c@ffc05000 {
@@ -682,6 +692,7 @@
 			reg = <0xffc05000 0x1000>;
 			interrupts = <0 159 4>;
 			emptyfifo_hold_master = <1>;
+			clocks = <&per_base_clk>;
 		};
 	};
 };
