FogBugz #113871: Add CIU clock in device tree entry for SD/MMC
This patch aligns the SD/MMC driver with the community version. We no
longer need to add "bus-hz" in the device tree entry and gets it correctly
from the ciu clock device tree entry.

Also adds dw_mmc-socfpga.c for platform specific functions such as
getting the CIU divider, setting for pwr-en, and USE_HOLD_REG setting.

Signed-off-by: Dinh Nguyen <dinguyen@altera.com>

v5:
- Fix up indentation/spacing
- Remove clock phase shift for socfpga_vt.dts

v4:
- Move setting of drvsel and smplsel to a one-time called function.
- Gate the SDMMC clock before setting drvsel and smplsel
- Remove set_ios functionality

v3:
- Add "altr,dw-mshc-ciu-div" for CIU clock divider value
- Add "altr,dw-mshc-sdr-timing" for drvsel and smplsel values for system
manager control register
- Sets the drvsel and smplsel bits in the system manager SDMMC group
- Add documentation for altr,dw-mshc device tree bindings
- Split out SOC and board specific bindings

v2:
- Read sysmgr sdmmc_ctrl group, if value > 0, use_hold_reg gets set
- Removed "bus-hz" from socfpga.dtsi
- Fixed divider of 4 for CIU clock
- Introduce global variable socfpga_sdmmc_use_hold_reg to use because its
more efficient than trying to check for use_hold_reg for every prepare_command.

--- a/arch/arm/boot/dts/socfpga_vt.dts
+++ b/arch/arm/boot/dts/socfpga_vt.dts
@@ -41,10 +41,18 @@
 			};
 		};
 
-		ethernet@ff700000 {
-			phy-mode = "gmii";
-			status = "okay";
-		};
+		dwmmc0@ff704000 {
+			num-slots = <1>;
+			supports-highspeed;
+			broken-cd;
+			altr,dw-mshc-ciu-div = <3>;
+			altr,dw-mshc-sdr-timing = <0 3>;
+
+			slot@0 {
+				reg = <0>;
+				bus-width = <4>;
+			};
+		};		
 
 		timer0@ffc08000 {
 			clock-frequency = <7000000>;
