FogBugz #119143: Base socfpga.dtsi is incomplete
Add missing base entries for I2C and CAN.
Keep the entries in socfpga.dtsi alphabetized.

Signed-off-by: Dinh Nguyen <dinguyen@altera.com>

--- a/arch/arm/boot/dts/socfpga_cyclone5.dtsi
+++ b/arch/arm/boot/dts/socfpga_cyclone5.dtsi
@@ -88,10 +88,6 @@
 			status = "okay";
 		};
 
-		i2c1: i2c@ffc05000 {
-			status = "disabled";
-		};
-
 		qspi: spi@ff705000 {
 				compatible = "cadence,qspi";
 				#address-cells = <1>;
@@ -163,6 +159,7 @@
 
 		i2c0: i2c@ffc04000 {
 			speed-mode = <0>;
+			status = "okay";
 		};
 
 		leds {
