FogBugz #152188: Switch to use DWC2 USB driver
Switch to use the latest USB driver from Synopsys, which is currently
in drivers/staging/dwc2. The driver currently only supports Host mode and DMA.

This patch enables the DWC2 driver for host mode and uses the 'old' driver
for peripheral mode.

By default, socfpga_defconfig will support Host mode. To enable Peripheral
mode, rebuild the kernel with CONFIG_USB_DWC_OTG=y.

Signed-off-by: Dinh Nguyen <dinguyen@altera.com>

--- a/drivers/usb/dwc2/Kconfig
+++ b/drivers/usb/dwc2/Kconfig
@@ -1,6 +1,7 @@
 config USB_DWC2
 	tristate "DesignWare USB2 DRD Core Support"
 	depends on USB
+	depends on !USB_DWC_OTG
 	help
 	  Say Y or M here if your system has a Dual Role HighSpeed
 	  USB controller based on the DesignWare HSOTG IP Core.
