--- a/arch/arm/boot/dts/socfpga.dtsi
+++ b/arch/arm/boot/dts/socfpga.dtsi
@@ -548,7 +548,7 @@
 			compatible = "snps,designware-i2c";
 			reg = <0xffc04000 0x1000>;
 			interrupts = <0 158 4>;
-			clocks = <&per_base_clk>;
+			clocks = <&l4_sp_clk>;
 			status = "disabled";
 		};
 
@@ -558,7 +558,7 @@
 			compatible = "snps,designware-i2c";
 			reg = <0xffc05000 0x1000>;
 			interrupts = <0 159 4>;
-			clocks = <&per_base_clk>;
+			clocks = <&l4_sp_clk>;
 			status = "disabled";
 		};
 
@@ -568,7 +568,7 @@
 			compatible = "snps,designware-i2c";
 			reg = <0xffc06000 0x1000>;
 			interrupts = <0 160 4>;
-			clocks = <&per_base_clk>;
+			clocks = <&l4_sp_clk>;
 			status = "disabled";
 		};
 
@@ -578,7 +578,7 @@
 			compatible = "snps,designware-i2c";
 			reg = <0xffc07000 0x1000>;
 			interrupts = <0 161 4>;
-			clocks = <&per_base_clk>;
+			clocks = <&l4_sp_clk>;
 			status = "disabled";
 		};
 
