FogBugz #99945-2: add gpio-dwapb driver to defconfig and dts
* Add the gpio-dwapb driver to the defconfig and device tree.
* Fix LED definitions in device tree
* Move the LED definitions that are specific to the Altera
  CycloneV socdk board to the proper device tree file.

Signed-off-by: Alan Tull <atull@altera.com>

v4: remove socfpga.dtsi changes which were upstreamed
    fix led definitions to match upstream socfpga.dtsi
    enable gpios in cyclone5 and arria5 dtsi
v3: fix arria5 socdk led definitions
    move cyclone5 led definitions to cyclone5 socdk dts
    move clock property to gpio main node, not gpio port nodes
v2: fix cyclone5 led definitions

--- a/arch/arm/boot/dts/socfpga_cyclone5.dtsi
+++ b/arch/arm/boot/dts/socfpga_cyclone5.dtsi
@@ -64,6 +64,18 @@
 			};
 		};
 
+		gpio@ff708000 {
+			status = "okay";
+		};
+
+		gpio@ff709000 {
+			status = "okay";
+		};
+
+		gpio@ff70a000 {
+			status = "okay";
+		};
+
 		i2c0: i2c@ffc04000 {
 			speed-mode = <0>;
 			status = "okay";
@@ -87,29 +99,6 @@
 
 		watchdog0: wd@ffd02000 {
 			status = "okay";
-		};
-
-		leds {
-			compatible = "gpio-leds";
-			hps0 {
-				label = "hps_led0";
-				gpios = <&gpio1 15 1>;
-			};
-
-			hps1 {
-				label = "hps_led1";
-				gpios = <&gpio1 14 1>;
-			};
-
-			hps2 {
-				label = "hps_led2";
-				gpios = <&gpio1 13 1>;
-			};
-
-			hps3 {
-				label = "hps_led3";
-				gpios = <&gpio1 12 1>;
-			};
 		};
 	};
 };
