FogBugz #200285: Add Preempt-RT Config options by default
This patch adds the required configuration options to enable the
preempt-rt kernel features by default.

Signed-off-by: Vince Bridgers <vbridger@altera.com>

--- a/arch/arm/configs/socfpga_defconfig
+++ b/arch/arm/configs/socfpga_defconfig
@@ -181,4 +181,7 @@ CONFIG_SRAM=y
 CONFIG_PPS=y
 CONFIG_NETWORK_PHY_TIMESTAMPING=y
 CONFIG_PTP_1588_CLOCK=y
+CONFIG_PREEMPT=y
+CONFIG_PREEMPT_RT=y
+CONFIG_PREEMPT_RT_FULL=y
 
